--- a/src/app/checkout/payment-information/payment-information.component.html
+++ b/src/app/checkout/payment-information/payment-information.component.html
@@ -2,7 +2,7 @@
     <form name="paymentInfoForm" role="form" [formGroup]="paymentInfoForm" class="tw-flex tw-flex-col tw-gap-3">
         <span class="tw-text-lg tw-font-bold ">Card information</span>
         <div class="tw-flex tw-flex-col tw-gap-4">
-            <div class="tw-flex tw-flex-col">
+            <div id="cardHolderNameField" class="tw-flex tw-flex-col">
                 <div class="form-floating">
                     <input id="cardHolderName" formControlName="cardHolderName" class="form-control"
                         [class.is-invalid]="paymentInfoForm.get('cardHolderName')?.invalid && (paymentInfoForm.get('cardHolderName')?.dirty || paymentInfoForm.get('cardHolderName')?.touched) "
@@ -13,12 +13,12 @@
                 paymentInfoForm.get('cardHolderName')?.touched)){
                 <div>
                     @if(paymentInfoForm.get('cardHolderName')){
-                    <span class="form-text text-danger">This field is required</span>
+                    <span id="requiredError" class="form-text text-danger">This field is required</span>
                     }
                 </div>
                 }
             </div>
-            <div class="tw-flex tw-flex-col">
+            <div id="cardNumberField" class="tw-flex tw-flex-col">
                 <div class="form-floating">
                     <input id="cardNumber" formControlName="cardNumber" class="form-control"
                         [class.is-invalid]="paymentInfoForm.get('cardNumber')?.invalid && (paymentInfoForm.get('cardNumber')?.dirty || paymentInfoForm.get('cardNumber')?.touched)"
@@ -39,7 +39,7 @@
                 }
             </div>
             <div class="tw-flex tw-flex-row tw-gap-2">
-                <div class="tw-flex tw-flex-col tw-w-[80%]">
+                <div id="expairyDateField" class="tw-flex tw-flex-col tw-w-[80%]">
                     <div class="form-floating">
                         <input id="expairyDate" formControlName="expairyDate" class="form-control"
                             [class.is-invalid]="paymentInfoForm.get('expairyDate')?.invalid && (paymentInfoForm.get('expairyDate')?.dirty || paymentInfoForm.get('expairyDate')?.touched)"
@@ -50,15 +50,15 @@
                     paymentInfoForm.get('expairyDate')?.touched)){
                     <div>
                         @if(paymentInfoForm.get('expairyDate')?.errors?.['required']){
-                        <span class="form-text text-danger">This filed is required</span>
+                        <span id="requiredError" class="form-text text-danger">This filed is required</span>
                         }
                         @if(paymentInfoForm.get('expairyDate')?.errors?.['pattern']){
-                        <span class="form-text text-danger">Invalid date</span>
+                        <span id="invalidDateError" class="form-text text-danger">Invalid date</span>
                         }
                     </div>
                     }
                 </div>
-                <div class="tw-flex tw-flex-col tw-w-[20%]">
+                <div id="cvvField" class="tw-flex tw-flex-col tw-w-[20%]">
                     <div class="form-floating">
                         <input id="cvv" formControlName="cvv" class="form-control"
                             [class.is-invalid]="paymentInfoForm.get('cvv')?.invalid && (paymentInfoForm.get('cvv')?.dirty || paymentInfoForm.get('cvv')?.touched)"
@@ -69,10 +69,10 @@
                     paymentInfoForm.get('cvv')?.touched)){
                     <div>
                         @if(paymentInfoForm.get('cvv')?.hasError('required')){
-                        <span class="form-text text-danger">This field is required</span>
+                        <span id="requiredError" class="form-text text-danger">This field is required</span>
                         }
                         @if(paymentInfoForm.get('cvv')?.hasError('pattern')){
-                        <span class="form-text text-danger">Invalid cvv</span>
+                        <span id="invalidCVVError" class="form-text text-danger">Invalid cvv</span>
                         }
                     </div>
 
@@ -83,7 +83,7 @@
 
         </div>
     </form>
-    <button class="btn btn-primary sm:tw-w-[200px] tw-w-full tw-self-end tw-mt-auto"
+    <button id="nextButton" class="btn btn-primary sm:tw-w-[200px] tw-w-full tw-self-end tw-mt-auto"
         (click)="onNextClick()">Next</button>
 
 </div>
