--- a/src/app/checkout/shipping-information/shipping-information.component.html
+++ b/src/app/checkout/shipping-information/shipping-information.component.html
@@ -3,26 +3,26 @@
         <div id="contactInfo" class="tw-flex tw-flex-col tw-gap-2">   
             <span class="tw-font-bold tw-text-lg">Contact info</span>
             <div class="tw-flex md:tw-flex-row tw-flex-col tw-w-full tw-gap-3 tw-p-2">
-                <div class="tw-w-full">
+                <div id="contactNameField" class="tw-w-full">
                     <div class="form-floating tw-w-full">
-                        <input formControlName="contactName" class="form-control" id="floatingInput"
+                        <input formControlName="contactName" class="form-control" id="contactName"
                             [class.is-invalid]="shippementInfoForm.get('contactName')!.invalid && (shippementInfoForm.get('contactName')!.dirty || shippementInfoForm.get('contactName')!.touched)"
                             placeholder="Ex: Jak Robert" required>
-                        <label for="floatingInput">Contact name<small> *</small></label>
+                        <label>Contact name<small> *</small></label>
                     </div>
                     @if (shippementInfoForm.get('contactName')!.invalid && (shippementInfoForm.get('contactName')!.dirty ||
                     shippementInfoForm.get('contactName')!.touched)) {
                     <div>
                         @if (shippementInfoForm.get('contactName')?.errors?.['required']) {
-                        <small class="form-text text-danger">This field is required</small>
+                        <small id="requiredError" class="form-text text-danger">This field is required</small>
                         }
                         @if (shippementInfoForm.get('contactName')?.errors?.['maxlength']) {
-                        <small class="form-text text-danger">Ce champ doit faire moins de 50 caractères.</small>
+                        <small id="maxlengthError" class="form-text text-danger">Ce champ doit faire moins de 50 caractères.</small>
                         }
                     </div>
                     }
                 </div>
-                <div class="tw-w-full">
+                <div id="contactEmailField" class="tw-w-full">
                     <div class="form-floating tw-w-full">
                         <input id="contactEmail" type="email" formControlName="contactEmail" class="form-control"
                             [class.is-invalid]="(shippementInfoForm.get('contactEmail')?.invalid && (shippementInfoForm.get('contactEmail')?.dirty || shippementInfoForm.get('contactEmail')?.touched))"
@@ -33,15 +33,15 @@
                     shippementInfoForm.get('contactEmail')?.touched)){
                     <div>
                         @if(shippementInfoForm.get('contactEmail')?.errors?.['required']){
-                        <small class="from-text text-danger">This filed is required</small>
+                        <small id="requiredError" class="from-text text-danger">This filed is required</small>
                         }
                         @if(shippementInfoForm.get('contactEmail')?.errors?.['email']){
-                        <small class="form-text text-danger">Invalid email</small>
+                        <small id="invalidEmailError" class="form-text text-danger">Invalid email</small>
                         }
                     </div>
                     }
                 </div>
-                <div class="tw-w-full">
+                <div id="contactPhoneNumberField" class="tw-w-full">
                     <div class="form-floating tw-w-full">
                         <input id="contactPhoneNumber" class="form-control" formControlName="contactPhoneNumber"
                             [class.is-invalid]="shippementInfoForm.get('contactPhoneNumber')?.invalid && (shippementInfoForm.get('contactPhoneNumber')?.dirty || shippementInfoForm.get('contactPhoneNumber')?.touched)"
@@ -52,7 +52,7 @@
                     shippementInfoForm.get('contactPhoneNumber')?.touched)){
                     <div>
                         @if(shippementInfoForm.get('contactPhoneNumber')?.errors?.['required']){
-                        <small class="form-text text-danger">This field is required</small>
+                        <small id="requiredError" class="form-text text-danger">This field is required</small>
                         }
                     </div>
                     }
@@ -61,12 +61,12 @@
 
             </div>
         </div>
-        <div id="address" class="tw-flex tw-flex-col tw-gap-2">
+        <div id="addressContainer" class="tw-flex tw-flex-col tw-gap-2">
             <span class="tw-font-bold tw-text-lg">Address</span>
             <div class="tw-flex tw-flex-col tw-w-full tw-gap-3 tw-p-2">
                 <div class="tw-flex sm:tw-flex-row tw-flex-col tw-gap-3">
-                    <div class="tw-w-full">
-                        <div class="form-floating tw-w-full">
+                    <div id="countryField" class="tw-w-full">
+                        <div  class="form-floating tw-w-full">
                             <select id="country" formControlName="country" class="form-select"
                                 [class.is-invalid]="shippementInfoForm.get('country')?.invalid && (shippementInfoForm.get('country')?.dirty || shippementInfoForm.get('country')?.touched)">
                                 <option disabled selected>Select an option</option>
@@ -80,12 +80,12 @@
                         shippementInfoForm.get('country')?.touched)){
                         <div>
                             @if(shippementInfoForm.get('country')?.errors?.['required']){
-                            <small class="form-text text-danger">This field is required</small>
+                            <small id="requiredError" class="form-text text-danger">This field is required</small>
                             }
                         </div>
                         }
                     </div>
-                    <div class="tw-w-full">
+                    <div id="stateProvinceField" class="tw-w-full">
                         <div class="form-floating tw-w-full">
                             <input id="stateProvince" formControlName="stateProvince" class="form-control"
                                 [class.is-invalid]="shippementInfoForm.get('stateProvince')?.invalid && (shippementInfoForm.get('stateProvince')?.dirty || shippementInfoForm.get('stateProvince')?.touched)"
@@ -97,14 +97,13 @@
                         shippementInfoForm.get('stateProvince')?.touched)){
                         <div>
                             @if(shippementInfoForm.get('stateProvince')?.errors?.['required']){
-                            <small class="form-text text-danger">This field is required</small>
+                            <small id="requiredError" class="form-text text-danger">This field is required</small>
                             }
                         </div>
                         }
 
                     </div>
-
-                    <div class="tw-w-full">
+                    <div id="cityField" class="tw-w-full">
                         <div class="form-floating tw-w-full">
                             <input id="city" formControlName="city" class="form-control"
                                 [class.is-invalid]="shippementInfoForm.get('city')?.invalid && (shippementInfoForm.get('city')?.dirty ||  shippementInfoForm.get('city')?.touched)"
@@ -115,16 +114,15 @@
                         shippementInfoForm.get('city')?.touched)){
                         <div>
                             @if(shippementInfoForm.get('city')?.errors?.['required']){
-                            <small class="form-text text-danger">This field is required</small>
+                            <small id="requiredError" class="form-text text-danger">This field is required</small>
                             }
                         </div>
                         }
                     </div>
-
                 </div>
 
                 <div class="tw-flex sm:tw-flex-row tw-flex-col tw-gap-3 tw-w-full">
-                    <div class="sm:tw-w-[80%] tw-w-full">
+                    <div id="streetHouseField" class="sm:tw-w-[80%] tw-w-full">
                         <div class="form-floating tw-w-full">
                             <input id="streetHouse" formControlName="streetHouse" class="form-control"
                                 [class.is-invalid]="shippementInfoForm.get('streetHouse')?.invalid && (shippementInfoForm.get('streetHouse')?.dirty ||  shippementInfoForm.get('streetHouse')?.touched)"
@@ -135,12 +133,12 @@
                         shippementInfoForm.get('streetHouse')?.touched)){
                         <div>
                             @if(shippementInfoForm.get('streetHouse')?.errors?.['required']){
-                            <small class="form-text text-danger">This field is required</small>
+                            <small id="requiredError" class="form-text text-danger">This field is required</small>
                             }
                         </div>
                         }
                     </div>
-                    <div class="sm:tw-w-[20%] tw-w-full">
+                    <div id="zipCodeField" class="sm:tw-w-[20%] tw-w-full">
                         <div class="tw-w-full">
                             <div class="form-floating  tw-w-full">
                                 <input id="zipCode" formControlName="zipCode" class="form-control"
@@ -153,13 +151,11 @@
                         shippementInfoForm.get('zipCode')?.touched)){
                         <div>
                             @if(shippementInfoForm.get('zipCode')?.errors?.['required']){
-                            <small class="form-text text-danger">This field is required</small>
+                            <small id="requiredError" class="form-text text-danger">This field is required</small>
                             }
                         </div>
                         }
                     </div>
-
-
                 </div>
 
                 <div>
@@ -168,6 +164,6 @@
             </div>
         </div>
     </form>
-    <button class="btn btn-primary sm:tw-w-[200px] tw-w-full tw-self-end tw-mt-auto"
+    <button id="nextButton" class="btn btn-primary sm:tw-w-[200px] tw-w-full tw-self-end tw-mt-auto"
         (click)="onNextClicked()">Next</button>
 </div>
