--- a/src/app/checkout/confirmation/checkout-confirmation.component.html
+++ b/src/app/checkout/confirmation/checkout-confirmation.component.html
@@ -10,27 +10,9 @@
     </div>
     <div class="tw-flex tw-flex-col tw-w-full tw-p-4 tw-gap-2 tw-border tw-border-gray-300 tw-rounded-lg">
         <span class="tw-text-lg tw-font-bold">Payment method</span>
-        <span>{{paymentInfoModel.cardNumber.substring(0,4)}} {{paymentInfoModel.cardNumber.substring(5,7)}}** ****
-            {{paymentInfoModel.cardNumber.substring(10,15)}}</span>
+        <span>{{paymentInfoModel.cardNumber?.substring(0,4)}} {{paymentInfoModel.cardNumber?.substring(5,7)}}** ****
+            {{paymentInfoModel.cardNumber?.substring(10,15)}}</span>
     </div>
-    <!-- <div class="tw-flex tw-flex-col tw-w-full tw-p-4 tw-gap-2 tw-border tw-border-gray-300 tw-rounded-lg">
-        <span class="tw-text-lg tw-font-bold">Summary</span>
-        <div class="tw-flex tw-flex-row">
-            <span>SubTotal</span>
-            <span class="tw-ms-auto">{{cartService.shoppingCart.totalPrice | number:'1.2-2' }}</span>
-        </div>
-        <div class="tw-flex tw-flex-row">
-            <span>Shipping cost</span>
-            <span class="tw-ms-auto">$ 0.00</span>
-        </div>
-
-        <div class="tw-flex tw-flex-row tw-font-bold">
-            <span>Total</span>
-            <span class="tw-ms-auto">{{cartService.shoppingCart.totalPrice | number:'1.2-2' }}</span>
-        </div>
-
-        <button class="btn btn-dark" [routerLink]="['/checkout']" (click)="onConfirmationClick()">Confirm and Pay</button>
-    </div> -->
     <div id="summary" class="tw-flex tw-flex-col tw-w-full tw-p-4 tw-gap-2 tw-border tw-border-gray-300 tw-rounded-lg">
         <span class="tw-text-xl tw-font-bold tw-mb-4">Summary</span>
         <div class="tw-flex tw-flex-row">
